# RVO2-CS

./: .bazelignore  .bazelrc  .bazelversion.license  .buildifier.json.license  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  .yamllint.yaml  .zenodo.json  .zenodo.json.license  BUILD.bazel  BingSiteAuth.xml  Brewfile  CITATION.cff  CMakeLists.txt  CMakePresets.json.license  COPYING  CTestConfig.cmake  Dockerfile  MODULE.bazel  README.md  RVO.sln  RVOCS.sln  RVOCS.sln.license  WORKSPACE.bazel  annotated.html  appveyor.yml  browsercontent.xml  classRVO_1_1Simulator-members.html  classRVO_1_1Simulator.html  classes.html  compose.yaml  doxygen.css  dynsections.js  functions.html  functions_func.html  global.json  global.json.license  (+15 more)
.devcontainer/: devcontainer.json  devcontainer.json.license
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.reuse/: dep5
Blocks/: BUILD.bazel  Blocks.cs  Blocks.csproj  CMakeLists.txt
Circle/: BUILD.bazel  CMakeLists.txt  Circle.cs  Circle.csproj
RVOCS/: Agent.cs  BUILD.bazel  CMakeLists.txt  KdTree.cs  Line.cs  Obstacle.cs  RVOCS.csproj  RVOMath.cs  Simulator.cs  Vector2.cs
doc/: Doxyfile  footer.html  footer.html.license  header.html.license  stylesheet.css
examples/: Blocks.cs  Blocks.csproj  CMakeLists.txt  Circle.cs  Circle.csproj
src/: Agent.cs  CMakeLists.txt  KdTree.cs  Line.cs  Obstacle.cs  RVO.csproj  RVOCS.csproj  RVOMath.cs  Simulator.cs  Vector2.cs
