# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# BUILD.bazel
# RVO2 Library C#
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:pkg.bzl", "pkg_deb", "pkg_tar")

package(default_package_metadata = [
    ":license",
    ":package_info",
])

license(
    name = "license",
    copyright_notice = "2008 University of North Carolina at Chapel Hill",
    license_kinds = ["@rules_license//licenses/spdx:Apache-2.0"],
    license_text = "LICENSE",
    visibility = ["//:__subpackages__"],
)

package_info(
    name = "package_info",
    package_name = "RVO2 Library C#",
    package_url = "https://gamma.cs.unc.edu/RVO2/",
    package_version = "2.1.0",
    visibility = ["//:__subpackages__"],
)

exports_files(
    ["LICENSE"],
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "doc",
    srcs = ["LICENSE"],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "usr/share/doc/RVOCS",
)

pkg_tar(
    name = "tar",
    srcs = [
        ":doc",
        "//RVOCS:lib",
    ],
    extension = "tar.gz",
)

pkg_deb(
    name = "deb",
    architecture = select({
        "@platforms//cpu:arm": "amd64",
        "@platforms//os:macos": "arm64",
        "//conditions:default": "all",
    }),
    data = ":tar",
    description = "Optimal Reciprocal Collision Avoidance for C#",
    homepage = "https://gamma.cs.unc.edu/RVO2/",
    license = "Apache-2",
    maintainer = "Jamie Snape",
    package = "rvocs",
    priority = "optional",
    section = "contrib/libdevel",
    version = "2.1.0",
)
