# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# RVOCS/BUILD.bazel
# RVO2 Library C#
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")

package(default_applicable_licenses = ["//:license"])

licenses(["notice"])  # Apache-2.0

csharp_library(
    name = "RVOCS.dll",
    srcs = [
        "Agent.cs",
        "KdTree.cs",
        "Line.cs",
        "Obstacle.cs",
        "RVOMath.cs",
        "Simulator.cs",
        "Vector2.cs",
    ],
    target_frameworks = ["net6.0"],
    targeting_packs = ["@rules_dotnet_nuget_packages//microsoft.netcore.app.ref"],
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "lib",
    srcs = [":RVOCS.dll"],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "usr/lib",
    visibility = ["//:__pkg__"],
)
